footer spacing fix

--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -14,7 +14,7 @@
     font-size: 18px;
     width:100%;
     display: inline-block;
-    height:70%;
+    height:100%;
     position: absolute;
     top: 0;
     bottom:0%;
